# machine-learning-book

./: .gitignore  00-Table-Of-Contents.ipynb  ArtificialNeuralNetwork.ipynb  Classification.ipynb  Data-Visualization.ipynb  Deep-Learning.ipynb  FeatureEngineering.ipynb  LICENSE  LICENSE.txt  MLIntro.ipynb  Makefile  ModelDeployment.ipynb  ModelSelection.ipynb  MultilayerNeuralNetworks.ipynb  NumPy-Intro.ipynb  Pandas-Intro.ipynb  PythonBasics.ipynb  README.md  Regression.ipynb  SentimentAnalysis.ipynb  Tools-Python-Intro.ipynb  environment.yml  ml.yml  pyproject.toml  python_environment_check.py  update_python_from_notebook.sh
ERRATA/: README.md
ch01/: .convert_notebook_to_script.py  README.md  python_environment_check.ipynb
ch02/: README.md  ch02.ipynb  ch02.py
ch03/: README.md  ch03.ipynb  ch03.py
ch04/: README.md  ch04.ipynb  ch04.py
ch05/: README.md  ch05.ipynb  ch05.py
ch06/: Copy_of_ch06.ipynb  README.md  ch06.ipynb  ch06.py
ch07/: README.md  ch07.ipynb  ch07.py
ch08/: README.md  ch08.ipynb  ch08.py
ch09/: AmesHousing.txt  DataDocumentation.txt  README.md  ch09.ipynb  ch09.py
ch10/: README.md  ch10.ipynb  ch10.py
ch11/: README.md  ch11.py  neuralnet.py
ch12/: README.md  ch12_part1.ipynb  ch12_part1.py  ch12_part2.ipynb  ch12_part2.py
ch13/: README.md  ch13_part1.ipynb  ch13_part1.py  ch13_part2.ipynb  ch13_part2.py  ch13_part3_lightning.ipynb  ch13_part3_lightning.py  ch13_part4_ignite.ipynb  ch13_part4_ignite.py
ch14/: README.md  ch14_part1.ipynb  ch14_part1.py  ch14_part2.ipynb  ch14_part2.py
ch15/: README.md  ch15_part1.ipynb  (+5 more)
(+39 files in other folders)
