[tool.poetry]
name = "machine-learning-book"
version = "0.1.0"
description = "Developing machine learning and deep learning models with python"
authors = ["Salmireles <sal.chemicale@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.8.10"
numpy = "1.21.2"
matplotlib = "3.4.3"
pandas = "1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
